--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prettier": "prettier '**/*' -u --write"
   },
   "dependencies": {
     "@formkit/vue": "*",
@@ -18,6 +19,7 @@
     "@vitejs/plugin-vue": "^3.0.3",
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
+    "prettier": "2.7.1",
     "tailwindcss": "^3.1.8",
     "vite": "^3.0.9"
   },
