--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -26,7 +26,7 @@
     },
     "format": {
       "name": "format",
-      "command": "npm run prettier",
+      "command": "yarn prettier",
       "runAtStart": false
     }
   }
